# tg-backend

./: Cargo.toml
mydir/: index.html
src/: lib.rs  tests.rs
src/api/: create.rs  home.rs  mod.rs  posts.rs  settings.rs
src/config/: configtoml.rs  json.rs  mod.rs  utils.rs
src/db/: mod.rs
src/journal/: home.rs  mod.rs  store.rs
src/routes/: mod.rs
