[package]
name = "tg-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dirs = "5.0.1"
once_cell = "1.19.0"
rusqlite = { version = "0.31.0", features = ["time", "uuid"] }
time = { version = "0.3.36", features = ["std", "macros", "formatting"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
uuid = "1.8.0"
