[package]
name = "tg-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
dirs = "5.0.1"
once_cell = "1.19.0"
rand = "0.8.5"
rusqlite = { version = "0.31.0", features = ["time", "uuid"] }
serde = { version = "1.0.204", features = ["derive"] }
time = { version = "0.3.33", features = ["std", "macros", "formatting", "local-offset"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0"
emojis = "0.6.2"
